feat/waybar: more waybar customization

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,103 +1,1 @@
-/* Waybar style.css */
-
-/* --- Define Colors and Fonts --- */
-
-* {
-    font-family: "FiraCode Nerd Font", "Font Awesome 6 Free", "Meslo LGM Nerd Font", sans-serif;
-    font-size: 13px;
-    border-radius: 20;
-    min-height: 0;
-}
-
-/* --- Main Bar --- */
-window#waybar {
-    background: transparent;
-}
-
-#workspaces {
-  background: transparent;
-  border: 2px solid rgba(255, 255, 255, 0.6);
-  border-radius: 15px;
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  -ms-border-radius: 15px;
-  -o-border-radius: 15px;
-}
-
-#workspaces button {
-  background: transparent;
-  border-radius: 12px;
-  padding: 2px 3px;
-  margin: 2px;
-}
-
-#workspaces button.active {
-  background: rgba(255, 255, 255, 1);
-  color: #000000;
-  font-weight: bold;
-}
-
-#workspaces button:hover {
-  background: rgba(255, 255, 255, 0.2);
-  color: rgb(255, 255, 255);
-  font-weight: inherit;
-  transition: all 0.3s ease;
-  border-radius: 12px;
-  padding: 2px 3px;
-  margin: 2px;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-}
-
-#battery {
-  color: rgb(255,255,255);
-  margin-right: 12px;
-}
-
-#battery.plugged {
-  color: rgb(105, 255, 120);
-}
-
-#info,
-#settings {
-  border: 2px solid rgba(255, 255, 255, 0.6);
-  padding: 5px 10px;
-}
-
-#cpu {
-  margin-right: 7px;
-}
-
-#cpu.warning {
-  color: rgb(253, 207, 78);
-}
-
-#cpu.critical {
-  color: rgb(224, 49, 49);
-}
-
-#memory {
-  margin-right: 7px;
-}
-
-#memory.warning {
-  color: rgb(253, 207, 78);
-}
-
-#memory.critical {
-  color: rgb(224, 49, 49);
-}
-
-#backlight {
-  margin-right: 7px;
-}
-
-#pulseaudio {
-  margin-right: 7px;
-}
-
-#custom-power {
-  font-size: 16px;
-}
+@import url("themes/islands.css");
