--- a/wlogout/.config/wlogout/style.css
+++ b/wlogout/.config/wlogout/style.css
@@ -17,11 +17,17 @@ button {
   margin: 5px;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 15%; /* Adjust size as needed */
+  background-size: 15%;
+  transition: all 0.3s ease;
 }
 
 button:hover {
-  border: 2px solid #ffffff;
+  background-color: rgba(255, 255, 255, 0.05);
+}
+
+button:focus {
+  outline: none;
+  background-color: rgba(255, 255, 255, 0.05);
 }
 
 #shutdown {
