--- a/wlogout/.config/wlogout/style.css
+++ b/wlogout/.config/wlogout/style.css
@@ -5,7 +5,7 @@
 }
 
 window {
-  background-color: rgba(12, 12, 12, 0.1);
+  background-color: rgba(12, 12, 12, 0.5);
 }
 
 button {
@@ -19,6 +19,7 @@ button {
   background-position: center;
   background-size: 15%;
   transition: all 0.3s ease;
+  text-shadow: none;
 }
 
 button:hover {
