--- a/waybar/.config/waybar/themes/single.css
+++ b/waybar/.config/waybar/themes/single.css
@@ -3,8 +3,8 @@
 /* --- Define Colors and Fonts --- */
 
 * {
-    font-family: "FiraCode Nerd Font", "Font Awesome 6 Free", "Meslo LGM Nerd Font", sans-serif;
-    font-size: 13px;
+    font-family: "JetBrainsMono Nerd Font", "FiraCode Nerd Font", "Font Awesome 6 Free", sans-serif;
+    font-size: 14px;
     border-radius: 20;
     min-height: 0;
 }
@@ -15,30 +15,30 @@ window#waybar {
 }
 
 window#waybar > box {
-  background-color: rgba(0, 0, 0, 0.4);
-  padding: 3px;
+  background-color: rgba(20, 20, 20, 0.4);
+  padding: 0px 10px;
+  border-radius: 0px;
 }
 
 #workspaces {
   background: transparent;
-  border-radius: 15px;
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  -ms-border-radius: 15px;
-  -o-border-radius: 15px;
 }
 
 #workspaces button {
   background: transparent;
-  border-radius: 12px;
-  padding: 2px 3px;
+  border-radius: 5px;
+  padding: 2px 5px;
   margin: 2px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
 
 #workspaces button.active {
-  background: rgba(255, 255, 255, 1);
+  background: rgb(199, 199, 199);
   color: #000000;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 #workspaces button:hover {
@@ -46,14 +46,14 @@ window#waybar > box {
   color: rgb(255, 255, 255);
   font-weight: inherit;
   transition: all 0.3s ease;
-  border-radius: 12px;
-  padding: 2px 3px;
+  border-radius: 5px;
+  padding: 2px 5px;
   margin: 2px;
 }
 
 #battery {
   color: rgb(255,255,255);
-  margin-right: 12px;
+  margin-right: 16px;
 }
 
 #battery.plugged {
@@ -62,7 +62,7 @@ window#waybar > box {
 
 #info,
 #settings {
-  padding: 5px 10px;
+  padding: 0px;
 }
 
 #cpu {
@@ -103,7 +103,7 @@ window#waybar > box {
 }
 
 #clock {
-  font-weight: 400;
+  font-weight: 600;
   font-size: 14px;
 }
 
@@ -120,4 +120,28 @@ tooltip {
 #network.ethernet,
 #network.wifi {
   color: rgb(139, 222, 255);
+}
+
+#custom-spotify {
+  color: #1db945;
+  padding: 0px 10px;
+  border: 0px solid rgba(29, 185, 69, 0.5);
+  margin-left: 10px;
+  transition: all 0.3s ease;
+}
+
+#custom-spotify.paused {
+  opacity: 0.5;
+}
+
+#custom-updates {
+  margin-right: 7px;
+}
+
+#custom-updates.critical {
+  color: rgb(255, 92, 92);
+}
+
+#custom-updates.warning {
+  color: rgb(253, 207, 78);
 }
