feat/waybar: minimal changes

--- a/waybar/.config/waybar/themes/single.css
+++ b/waybar/.config/waybar/themes/single.css
@@ -15,7 +15,7 @@ window#waybar {
 }
 
 window#waybar > box {
-  background-color: rgba(20, 20, 20, 0.4);
+  background-color: rgba(20, 20, 20, 0.6);
   padding: 0px 10px;
   border-radius: 0px;
 }
@@ -56,8 +56,17 @@ window#waybar > box {
   margin-right: 16px;
 }
 
-#battery.plugged {
+#battery.plugged,
+#battery.charging {
   color: rgb(105, 255, 120);
+}
+
+#battery.full {
+  color:rgb(139, 222, 255);
+}
+
+#battery.discharging {
+  color:rgb(253, 207, 78);
 }
 
 #info,
