fix: margins of waybar elements

--- a/waybar/.config/waybar/themes/single.css
+++ b/waybar/.config/waybar/themes/single.css
@@ -79,7 +79,7 @@ window#waybar > box {
 }
 
 #memory {
-  margin: 0px 10px;
+  margin: 0px 20px 0 10px;
 }
 
 #memory.warning {
@@ -118,7 +118,7 @@ tooltip {
 }
 
 #custom-updates {
-  margin: 0 10px;
+  margin: 0 10px 0px 0px;
 }
 
 #custom-updates.critical {
