--- a/vivaldi/.config/vivaldi/styles/custom.css
+++ b/vivaldi/.config/vivaldi/styles/custom.css
@@ -1,3 +1,7 @@
 .tab.active {
     border: 2px solid rgba(255,255,255,0.6) !important;
 }
+
+.tab.active .favicon {
+    filter: none !important;
+}
